feat: ensure compatibility with Java 17